--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .noise {
+    background-image: url(/assets/images/svg/noise.svg);
+    background-repeat: repeat;
+    opacity: 0.2;
+  }
+}
