feat: new email body for verification email and forgot password email without styling

--- a/apps/server/src/mail/templates/email-verification.hbs
+++ b/apps/server/src/mail/templates/email-verification.hbs
@@ -1,35 +1,38 @@
-<img src='https://i.ibb.co/kSj80WX/logo.png' alt='logo halostemba' />
+<div>
+  <div class='head'>
+    <img src='https://i.ibb.co/LSdmRyH/bg-pattern.jpg' alt='' />
+    <h1>
+      Ubah Kata Sandi
+    </h1>
+  </div>
 
-<p> Halo {{name}},</p>
+  <div>
+    <div>
+      <img src='https://i.ibb.co/kSj80WX/logo.png' alt='logo halostemba' />
+    </div>
+    <p>
+      Halo
+      {{name}},
+    </p>
+    <p>Terima kasih telah mendaftar di halostemba. Untuk melanjutkan dan
+      mengaktifkan akun Anda, kami memerlukan verifikasi alamat email Anda.
+      Silakan klik tombol di bawah ini untuk menyelesaikan proses verifikasi:</p>
+    <button> <a href={{url}}></a></button>
+    <hr />
+    <p>Atau silahkan kunjungi link berikut
+      <a href={{link}}>{{link}}</a></p>
+    <p>
+      Harap gunakan link ini dalam waktu<span style='font-weight: bold;'>
+        5 menit
+      </span>sebelum kadaluarsa.
+    </p>
+    <p>
+      Terima kasih atas partisipasi Anda dalam halostemba. Kami berharap Anda
+      menikmati pengalaman penggunaan kami!
+    </p>
+    <p>Salam,
+    </p>
+    <p>Tim Layanan halostemba</p>
 
-<p>
-  Terima kasih telah menggunakan layanan kami!
-</p>
-
-<p>
-  Untuk melanjutkan proses verifikasi, silahkan klik link dibawah ini:
-</p>
-
-<p>
-  {{url}}
-</p>
-
-<p>
-  Harap gunakan link ini dalam waktu 5 menit sebelum kadaluarsa.
-</p>
-
-<p>
-  Jangan berikan link ini kepada siapapun, termasuk tim kami. Kami tidak pernah
-  meminta informasi ini untuk alasan keamanan.
-</p>
-
-<p>
-  Terima kasih atas kepercayaan Anda kepada kami.
-</p>
-
-<p>
-  Salam,
-</p>
-<p>
-  Tim Layanan halostemba
-</p>
+  </div>
+</div>
