--- a/apps/server/src/mail/templates/forgot-password.hbs
+++ b/apps/server/src/mail/templates/forgot-password.hbs
@@ -1,35 +1,37 @@
-<img src='https://i.ibb.co/kSj80WX/logo.png' alt='logo halostemba' />
+<div>
+  <div class='head'>
+    <img src='https://i.ibb.co/LSdmRyH/bg-pattern.jpg' alt='' />
+    <h1>
+      Ubah Kata Sandi
+    </h1>
+  </div>
 
-<p> Halo {{name}},</p>
+  <div>
+    <div>
+      <img src='https://i.ibb.co/kSj80WX/logo.png' alt='logo halostemba' />
+    </div>
+    <p>
+      Halo
+      {{name}},
+    </p>
+    <p>Terima kasih telah menggunakan layanan kami! Untuk melanjutkan proses
+      verifikasi, berikut adalah kode One-Time Password (OTP) Anda:</p>
+    <h2>
+      {{otp}}
+    </h2>
+    <hr />
+    <p>
+      Harap gunakan kode ini dalam waktu<span style='font-weight: bold;'>
+        5 menit
+      </span>sebelum kadaluarsa.
+    </p>
+    <p>
+      Jangan berikan kode ini kepada siapapun, termasuk tim kami. Kami tidak
+      pernah meminta informasi ini untuk alasan keamanan.
+    </p>
+    <p>Salam,
+    </p>
+    <p>Tim Layanan halostemba</p>
 
-<p>
-  Terima kasih telah menggunakan layanan kami!
-</p>
-
-<p>
-  Untuk melanjutkan mengubah password, silahkan masukkan OTP dibawah ini:
-</p>
-
-<p>
-  {{otp}}
-</p>
-
-<p>
-  Harap gunakan OTP ini dalam waktu 5 menit sebelum kadaluarsa.
-</p>
-
-<p>
-  Jangan berikan OTP ini kepada siapapun, termasuk tim kami. Kami tidak pernah
-  meminta informasi ini untuk alasan keamanan.
-</p>
-
-<p>
-  Terima kasih atas kepercayaan Anda kepada kami.
-</p>
-
-<p>
-  Salam,
-</p>
-<p>
-  Tim Layanan halostemba
-</p>
+  </div>
+</div>
