feat: create forgot password client functionality

--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -9,3 +9,15 @@
     opacity: 0.2;
   }
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  display: none;
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  appearance: none;
+  -moz-appearance: textfield;
+}
